test/should_pass/reuse_007.grg
actions reuse_007;

rule r {
	pattern {
		x: Node;
		y: Node;
		x-e:Edge->y;
	}
	replace {
		x; y;
		x;
		-e->;
		y;
	}
}


