test/should_fail/dangle_005.grg
actions dangle_005;

rule r {
	pattern {
		x: Node;
		y: Node;
		x -e:Edge-> y;
	}
	replace{
		.-e->y;
	}
}
